update main n render process in app

--- a/static/index.html
+++ b/static/index.html
@@ -40,6 +40,10 @@
             class="bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5"
           />
         </div>
+
+        <div id="item-files" class="mt-2 overflow-y-auto h-32 hidden">
+          <ul id="list-files"></ul>
+        </div>
       </div>
 
       <div>
@@ -61,6 +65,13 @@
           class="bg-orange-500 hover:bg-orange-400 text-white rounded-md px-3 py-2"
         >
           Исходное положение
+        </button>
+
+        <button
+          id="btn-upload"
+          class="bg-green-500 hover:bg-green-400 text-white rounded-md px-3 py-2"
+        >
+          Загрузить
         </button>
       </div>
     </div>
